--- a/urls.cfg
+++ b/urls.cfg
@@ -1,5 +1,6 @@
-google=https://google.com
-hn=https://news.ycombinator.com
-reddit=https://reddit.com
-statsig=https://www.statsig.com
-worldclock=http://worldclockapi.com/api/json/utc/now
+forum=https://forums.lovelyrua.asia
+mcsm=https://mcsm.lovelyrua.asia
+chat=https://talk.lovelyrua.asia
+hfs=https://hfs.lovelyrua.asia:81
+pan=https://pan.lovelyrua.asia:81
+pic=https://pic.lovelyrua.asia:81
