--- a/urls.cfg
+++ b/urls.cfg
@@ -1,6 +1,6 @@
 forum=https://forums.lovelyrua.asia
 mcsm=https://mcsm.lovelyrua.asia
-chat=https://talk.lovelyrua.asia
+talk=https://talk.lovelyrua.asia
 hfs=https://hfs.lovelyrua.asia:81
 pan=https://pan.lovelyrua.asia:81
-pic=https://pic.lovelyrua.asia:81
+
