--- a/urls.cfg
+++ b/urls.cfg
@@ -1,6 +1,6 @@
 forum=https://forums.lovelyrua.asia
 mcsm=https://mcsm.lovelyrua.asia
-talk=https://talk.lovelyrua.asia
+音乐解锁=https://unlock.lovelyrua.asia
 hfs=https://hfs.lovelyrua.asia:81
 pan=https://pan.lovelyrua.asia:81
 
