--- a/urls.cfg
+++ b/urls.cfg
@@ -1,5 +1,5 @@
 forum=https://forums.lovelyrua.asia
-mcsm=https://lovelyrua.asia:50233
+mcsm=https://mc.lovelyrua.asia:81
 音乐解锁=https://unlock.lovelyrua.asia
 hfs=https://hfs.lovelyrua.asia:81
 pan=https://pan.lovelyrua.asia:81
