--- a/urls.cfg
+++ b/urls.cfg
@@ -2,5 +2,5 @@ forum=https://forums.lovelyrua.asia
 mcsm=https://mc.lovelyrua.asia:81
 音乐解锁=https://unlock.lovelyrua.asia
 hfs=https://hfs.lovelyrua.asia:81
-pan=https://pan.lovelyrua.asia:81
+pan=https://pan.lovelyrua.asia
 
